fixed bug causing shopping cart btn to break out of container

--- a/styles/_lightbox.scss
+++ b/styles/_lightbox.scss
@@ -114,7 +114,7 @@
 }
 
 @media (min-width: 1440px) {
-  button {
+  .lightbox-container > button {
     transform: scale(1.25);
   }
 }
@@ -125,7 +125,7 @@
     width: 70%;
   }
 
-  button {
+  .lightbox-container > button {
     transform: scale(1.5);
   }
 }
