--- a/styles/style.css
+++ b/styles/style.css
@@ -595,7 +595,7 @@
   }
 }
 @media (min-width: 1440px) {
-  button {
+  .lightbox-container > button {
     transform: scale(1.25);
   }
 }
@@ -605,7 +605,7 @@
     width: 70%;
   }
 
-  button {
+  .lightbox-container > button {
     transform: scale(1.5);
   }
 }
